--- a/mypos/src/index.html
+++ b/mypos/src/index.html
@@ -17,9 +17,10 @@
 
 </head>
 
-<body>
-  <app-root></app-root>
-  
+<body class="sidebar-mini layout-fixed">
+  <div class="wrapper">
+    <app-root></app-root>
+  </div>
   <!-- jQuery -->
   <script src="assets/adminlte/plugins/jquery/jquery.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
